--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>或陽</title>
-        <meta name='description' content="ベースレス3ピースツインボーカルピアノロックバンド　ダークでポップでクールな音楽を。">
+        <meta name='description' content="或陽の公式ページ。活動情報、プロフィール等。">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:url" content="https://shunta-iwasaki.github.io/portfolio/" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="或陽" />
         <meta property="og:description" content="或陽の公式ページ。活動情報、プロフィール等。" />
         <meta property="og:site_name" content="或陽" />
-        <meta property="og:image" content="https://shunta-iwasaki.github.io/portfolio/img/img_main_phone.jpg" />        
+        <meta property="og:image" content="https://shunta-iwasaki.github.io/portfolio/img/img_main_phone.jpg" />
         <link rel="icon" type="image/png" href="https://shunta-iwasaki.github.io/portfolio/img/logo.png">
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link rel="stylesheet" href="css/style.css">
