refactor_堀田さんFBに対する対応

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!-- メイン写真 -->
         <div class="main-img">
             <img class="main-img__screen" src="img/img_main.jpg" alt="或陽">
-            <img class="main-img__phone" src="img/img_main_phone.jpg" alt="或陽">
+            <img class="main-img__phone" src="img/img_main.jpg" alt="或陽">
         </div>
         <!-- スクロールアイコン -->
         <img class ="icon-in" src="img/func_scroll5.png" alt="">
