--- a/lyric.html
+++ b/lyric.html
@@ -30,7 +30,7 @@
             <div>
             </div>
         </header>
-        <div class="wrapper songs">
+        <div class="wrapper songs flash">
             <ul class="songs__song">
                 <li class="songs__song__jp">
                     <a href="#" id="red_shoes">赤い靴</a>
